<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_file_information"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    tools:context=".ui.FileInformationFragment">

    <LinearLayout
        android:id="@+id/file_information_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/file_information_fragment_text_left_padding"
            android:text="@string/selected_file_name_text"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText

            android:id="@+id/file_information_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/file_information_size_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/file_information_fragment_text_left_padding"
            android:text="@string/selected_file_size_text"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/file_information_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/file_information_fragment_text_left_padding"
            android:text="@string/selected_file_type_text"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

</FrameLayout>