<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.liviugheorghe.pcc_client.ui.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/ts_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center"
            android:textSize="20sp" android:paddingTop="10sp" android:paddingBottom="10sp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="5">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="20sp"
                android:paddingBottom="20sp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_laptop_mac_orange_100dp" />

            </TableRow>

            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/device_0"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/computer_ip_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/computer_ip_text_input_placeholder"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#00897B"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#00897B"
                    android:textIsSelectable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/connect_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4511E"
                android:text="@string/ec_button_text"
                android:textColor="#FFFFFF" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="30sp"
                android:paddingBottom="30sp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_qr_code_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">

                <ImageButton
                    android:id="@+id/start_scan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/qrcode_64" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>