<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liviugheorghe.pcc_client.ui.MainControlInterfaceActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_vertical" android:id="@+id/tableLayout"
        android:background="#000000">

        <TextView
            android:id="@+id/hostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/br_down"
                android:background="#000000" android:layout_weight="1"
                app:srcCompat="@drawable/ic_indeterminate_check_box_black_24dp"
                android:contentDescription="@string/todo" />
            <TextView
                android:text="@string/brightness_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/textView3" android:textSize="24sp"
                android:paddingLeft="5sp" android:paddingRight="5sp" android:layout_weight="2"
                android:gravity="center" android:background="@color/colorDark"
                android:textColor="@color/colorWhite"/>
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/br_up"
                android:background="#000000" android:layout_weight="1"
                app:srcCompat="@drawable/ic_add_box_black_24dp"
                android:contentDescription="@string/todo" />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/buttons_row_1" android:gravity="center_horizontal">
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/vol_down"
                android:background="@color/colorDark" android:layout_weight="1"
                app:srcCompat="@drawable/ic_indeterminate_check_box_black_24dp"
                android:contentDescription="TODO" />
            <TextView
                android:text="@string/volume_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/textView2" android:textSize="24sp"
                android:paddingLeft="5sp" android:paddingRight="5sp" android:layout_weight="2"
                android:gravity="center" android:background="@color/colorDark"
                android:textColor="@color/colorWhite"/>
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/vol_up"
                android:background="#000000" android:layout_weight="1"
                app:srcCompat="@drawable/ic_add_box_black_24dp"
                android:contentDescription="@string/todo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                app:srcCompat="@drawable/ic_home_black_24dp" android:id="@+id/home_button"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                app:srcCompat="@drawable/ic_arrow_upward_black_24dp" android:id="@+id/key_up"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" android:id="@+id/key_left"
                android:contentDescription="TODO" />
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                app:srcCompat="@drawable/ic_center_focus_strong_black_24dp" android:id="@+id/key_enter"/>
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                app:srcCompat="@drawable/ic_arrow_forward_black_24dp" android:id="@+id/key_right"
                android:contentDescription="TODO" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                app:srcCompat="@drawable/ic_arrow_downward_black_24dp" android:id="@+id/key_down"
                android:contentDescription="TODO" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <ImageButton
                android:onClick="clickActionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                app:srcCompat="@drawable/ic_autorenew_black_24dp" android:id="@+id/switch_tabs"
                android:contentDescription="TODO" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/open_touchpad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:contentDescription="TODO"
                android:onClick="clickOpenTouchPad"
                app:srcCompat="@drawable/ic_touch_app_black_24dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/upload_file"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:contentDescription="TODO"
                android:onClick="clickOpenFile"
                app:srcCompat="@drawable/ic_file_upload_orange_50dp" />
        </TableRow>
    </TableLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/close_connection_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DF4A16"
            android:onClick="clickCloseConnectionButton"
            android:text="@string/close_connection_button_text" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
